--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,7 @@
 /* SAMPLE SCSS FILE CONTENTS */
+@import 'admin.scss';
 @import 'vars.scss';
+@import 'logo.scss';
 // @import 'fonts.scss';
 // @import 'animations.scss';
 // @import 'functions.scss';
