finished logo svg animation

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,27 @@ ul.tabs {
 /* Fonts */
 /* Text */
 /* Colors*/
+.logo-wrapper.small {
+  width: 84px; }
+
+.logo-wrapper.large {
+  width: 176px; }
+
+.logo-wrapper.animated .logo {
+  animation: logo-wrapper 4s ease-in;
+  -webkit-backface-visibility: hidden; }
+  .logo-wrapper.animated .logo .inner {
+    transform-origin: 100% 50%;
+    animation: logo-inner 4s ease-in;
+    -webkit-backface-visibility: hidden; }
+  .logo-wrapper.animated .logo .outer {
+    transform-origin: 0% 55%;
+    animation: logo-outer 4s ease-in;
+    -webkit-backface-visibility: hidden; }
+  .logo-wrapper.animated .logo .line {
+    animation: logo-line 4s ease-in;
+    -webkit-backface-visibility: hidden; }
+
 .logo {
   position: relative;
   display: block;
@@ -33,7 +54,7 @@ ul.tabs {
     z-index: 2;
     position: absolute;
     width: 87.5%;
-    height: 91.935%;
+    height: 92.44%;
     top: 4.838%;
     left: 0; }
   .logo .inner {
@@ -65,6 +86,34 @@ ul.tabs {
     position: absolute;
     top: 38.709%;
     left: 10%; }
+
+@keyframes logo-wrapper {
+  from {
+    opacity: 0;
+    transform: scale(2); }
+  to {
+    opacity: 1;
+    transform: scale(1); } }
+
+@keyframes logo-inner {
+  from {
+    transform: rotate(180deg); }
+  to {
+    transform: rotate(0deg); } }
+
+@keyframes logo-outer {
+  from {
+    transform: rotate(-90deg); }
+  to {
+    transform: rotate(0deg); } }
+
+@keyframes logo-line {
+  from {
+    -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+    clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%); }
+  to {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } }
 
 * {
   box-sizing: border-box; }
@@ -120,3 +169,9 @@ button, select {
   border-left-color: #F6F5F0; }
 
 /* Blocks */
+/* Pages */
+body.path-frontpage {
+  background: #fff; }
+  body.path-frontpage .main-layout {
+    background: #fff;
+    border: none; }
