--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,22 +1,36 @@
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+@keyframes logo-wrapper {
+    from { 
+        opacity: 0;
+        transform: scale(2);
+    }
+    to   { 
+        opacity: 1;
+        transform: scale(1);
+    }
 }
-
-// Delays
-
-.delay-1 {
-    animation-delay: 0s;
+@keyframes logo-inner {
+    from { 
+        transform: rotate(180deg);
+    }
+    to   { 
+        transform: rotate(0deg);
+    }
 }
-.delay-2 {
-    animation-delay: 0.2s;
+@keyframes logo-outer {
+    from { 
+        transform: rotate(-90deg);
+    }
+    to   { 
+        transform: rotate(0deg);
+    }
 }
-.delay-3 {
-    animation-delay: 0.4s;
-}
-.delay-4 {
-    animation-delay: 0.6s;
-}
-.delay-5 {
-    animation-delay: 0.8s;
+@keyframes logo-line {
+    from   { 
+        -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+        clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+    }
+    to { 
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
 }
