--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,19 +11,23 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: rem(14px);
   line-height: 1.3;
-  color: #4B4B4D;
+  color: $clr1;
 }
 
 ::-moz-selection { /* Code for Firefox */
     // color: #fff;
-    background: $color-3;
+    background: $clr3;
     text-shadow: none;
 }
 
 ::selection {
     // color: #fff;
-    background: $color-3;
+    background: $clr3;
     text-shadow: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
 }
 
 a {
