--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,61 +1,8 @@
 /*----------  Rubik Font  ----------*/
 
 @font-face {
-    font-family: 'Rubik-Regular';
-    src: url('../fonts/rubik/Rubik-Regular.ttf');
-    // src: url('../fonts/miriam/MiriamLibre-Regular.eot?#iefix') format('embedded-opentype'),
-    //     url('../fonts/miriam/MiriamLibre-Regular.woff2') format('woff2'),
-    //     url('../fonts/miriam/MiriamLibre-Regular.woff') format('woff'),
-    //     url('../fonts/miriam/MiriamLibre-Regular.ttf') format('truetype'),
-    //     url('../fonts/miriam/MiriamLibre-Regular.svg#MiriamLibre-Regular') format('svg');
+    font-family: 'heebo';
+    src: url('../../fonts/heebo/Heebo-Regular.ttf');
     font-weight: 400;
     font-style: normal;
 }
-
-@font-face {
-    font-family: 'Rubik-Bold';
-    src: url('../fonts/rubik/Rubik-Bold.ttf');
-    // src: url('../fonts/miriam/MiriamLibre-Bold.eot?#iefix') format('embedded-opentype'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.woff2') format('woff2'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.woff') format('woff'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.ttf') format('truetype'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.svg#MiriamLibre-Bold') format('svg');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Rubik-Light';
-    src: url('../fonts/rubik/Rubik-Light.eot');
-    // src: url('../fonts/miriam/MiriamLibre-Bold.eot?#iefix') format('embedded-opentype'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.woff2') format('woff2'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.woff') format('woff'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.ttf') format('truetype'),
-    //     url('../fonts/miriam/MiriamLibre-Bold.svg#MiriamLibre-Bold') format('svg');
-    font-weight: 300;
-    font-style: normal;
-}
-
-/*----------  Awsome Font  ----------*/
-
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/FontAwesome.otf');
-  src: url('../fonts/fontawesome-webfont.eot') format('embedded-opentype'),
-    url('../fonts/fontawesome-webfont.woff2') format('woff2'),
-    url('../fonts/fontawesome-webfont.woff') format('woff'),
-    url('../fonts/fontawesome-webfont.ttf') format('truetype'),
-    url('../fonts/fontawesome-webfont.svg') format('svg');
-//  src: url('#{$fa-font-path}/FontAwesome.otf') format('opentype'); // used when developing fonts
-  font-weight: normal;
-  font-style: normal;
-}
-
-.fa {
-    display: inline-block;
-    font-family: FontAwesome;
-    font-size: inherit; // can't have font-size inherit on line above, so need to override
-    text-rendering: auto; // optimizelegibility throws things off #1094
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
