--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,10 +1,11 @@
 /* SAMPLE SCSS FILE CONTENTS */
 @import 'admin.scss';
 @import 'vars.scss';
+@import 'helpers.scss';
 @import 'logo.scss';
 @import 'animations.scss';
-// @import 'fonts.scss';
-// @import 'functions.scss';
+@import 'fonts.scss';
+@import 'functions.scss';
 // @import 'mixins.scss';
 @import 'base.scss';
 @import 'layout.scss';
