working on front page

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -9,6 +9,9 @@
 // @import 'mixins.scss';
 @import 'base.scss';
 @import 'layout.scss';
+
+
+@import 'menus.scss';
 // @import 'forms.scss';
 
 /* Blocks */
