--- a/scss/_front.scss
+++ b/scss/_front.scss
@@ -15,6 +15,14 @@ body.path-frontpage {
         margin-bottom: 46px;
     }
 
+    .region-header {
+        display: flex;
+        justify-content: center;
+        @include for-normal-layout {
+            justify-content: flex-start;
+        }
+    }
+
     .logo-block {
         @include for-normal-layout {
             margin-right: -16px;
@@ -42,12 +50,15 @@ body.path-frontpage {
             height: 136px;
             padding: 12px 0;
             font-size: 14px;
-            border: solid 1px $clr4;
+            border: solid 1px #939597;
             border-radius: 20px;
             color: #E24739;
             background-repeat: no-repeat;
             background-position: center 26px;
             background-size: 62px;
+            background-color: #fff;
+
+            transition: all .4s;
 
             &.polygraph-link {
                 background-image: url($polygraph-icon);
@@ -59,6 +70,10 @@ body.path-frontpage {
 
             &.blog-link {
                 background-image: url($blog-icon);
+            }
+
+            &:hover {
+                box-shadow: 4px 4px 11px 0px rgba(0, 0, 0, 0.25);
             }
         }
     }
