--- a/scss/_front.scss
+++ b/scss/_front.scss
@@ -2,7 +2,8 @@ body.path-frontpage {
     background: #fff;
 
     .dialog-off-canvas-main-canvas {
-        max-width: 700px;
+        max-width: 732px;
+        padding: 0 16px;
         margin: 46px auto 0;
     }
     
@@ -38,24 +39,42 @@ body.path-frontpage {
         display: flex;
         justify-content: space-evenly;
         margin: 0 0 rem(46px);
+
+        @include for-mobile-layout {
+            justify-content: space-between;
+        }
     }
 
     li.menu-item {
+
+        max-width: 136px;
+        width: calc( 33.333% - 6px);
+        position: relative;
+        margin: 0;
+        padding: 0;
+
+        &::after {
+            content: "";
+            display: block;
+            padding-bottom: 100%;
+        }
+
         a {
             display: flex;
             align-items: flex-end;
             justify-content: center;
             font-family: 'heebo';
-            width: 136px;
-            height: 136px;
+            position: absolute;
+            width: 100%;
+            height: 100%;
             padding: 12px 0;
             font-size: 14px;
             border: solid 1px #939597;
             border-radius: 20px;
             color: #E24739;
             background-repeat: no-repeat;
-            background-position: center 26px;
-            background-size: 62px;
+            background-position: center 34%;
+            background-size: 45%;
             background-color: #fff;
 
             transition: all .4s;
