--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -15,7 +15,7 @@
 // @import 'forms.scss';
 
 /* Blocks */
-// @import 'header.scss';
+@import 'header.scss';
 // @import 'footer.scss';
 
 /* Pages */
