--- a/css/custom.css
+++ b/css/custom.css
@@ -124,20 +124,22 @@ a.more-link {
 .logo-wrapper.large {
   width: 140px; }
 
-.logo-block.animated {
-  animation: logo-wrapper 4s ease-in;
-  -webkit-backface-visibility: hidden; }
-  .logo-block.animated .logo .inner {
-    transform-origin: 100% 50%;
-    animation: logo-inner 4s ease-in;
+.logo-block {
+  font-family: 'heebo'; }
+  .logo-block .animated {
+    animation: logo-wrapper 4s ease-in;
     -webkit-backface-visibility: hidden; }
-  .logo-block.animated .logo .outer {
-    transform-origin: 0% 55%;
-    animation: logo-outer 4s ease-in;
-    -webkit-backface-visibility: hidden; }
-  .logo-block.animated .logo .line {
-    animation: logo-line 4s ease-in;
-    -webkit-backface-visibility: hidden; }
+    .logo-block .animated .logo .inner {
+      transform-origin: 100% 50%;
+      animation: logo-inner 4s ease-in;
+      -webkit-backface-visibility: hidden; }
+    .logo-block .animated .logo .outer {
+      transform-origin: 0% 55%;
+      animation: logo-outer 4s ease-in;
+      -webkit-backface-visibility: hidden; }
+    .logo-block .animated .logo .line {
+      animation: logo-line 4s ease-in;
+      -webkit-backface-visibility: hidden; }
 
 .logo {
   position: relative;
@@ -188,15 +190,20 @@ a.more-link {
     left: 10%; }
 
 .logo-text {
-  font-family: 'heebo';
   margin: 0;
   line-height: 1.1;
   font-size: 4.125rem;
   letter-spacing: 0.125rem; }
+  .small-logo .logo-text {
+    line-height: 1;
+    font-size: 2.625rem; }
 
 .logo-menu {
   margin-right: -1.875rem;
   font-size: 1.125rem; }
+  .small-logo .logo-menu {
+    font-size: 0.875rem;
+    margin-right: 0rem; }
   @media (max-width: 520px) {
     .logo-menu {
       font-size: 0.875rem; } }
@@ -216,11 +223,13 @@ body {
 
 ::-moz-selection {
   /* Code for Firefox */
-  background: #fff700;
+  color: #fff;
+  background: #E24739;
   text-shadow: none; }
 
 ::selection {
-  background: #fff700;
+  color: #fff;
+  background: #E24739;
   text-shadow: none; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -242,6 +251,10 @@ iframe {
 button, select {
   cursor: pointer; }
 
+.dialog-off-canvas-main-canvas {
+  max-width: 1024px;
+  margin: 0 auto; }
+
 .main-layout {
   background-color: #F6F5F0;
   border-right-width: 4px;
@@ -256,11 +269,54 @@ button, select {
   border-left-style: solid;
   border-top-color: #F6F5F0;
   border-left-color: #F6F5F0; }
+  .main-layout .region-content {
+    width: 100% !important;
+    margin: 0 !important; }
+    .main-layout .region-content > * {
+      padding: 0 30px; }
+
+header {
+  margin: 40px 0 6px; }
 
 .menu-item--collapsed, [dir="rtl"] .menu-item--collapsed {
   list-style: none; }
 
 /* Blocks */
+.content-header {
+  background-repeat: no-repeat;
+  height: 90px;
+  position: relative; }
+  body.polygraph .content-header {
+    background-image: url("../../images/top_bar/top_polygraph.jpg"); }
+  body.investigation .content-header {
+    background-image: url("../../images/top_bar/top_investigation.jpg"); }
+  .content-header::before {
+    content: "";
+    display: block;
+    width: calc( 100% - 174px);
+    height: 6px;
+    background-color: #b8c5c3;
+    position: absolute;
+    right: 0;
+    bottom: -11px;
+    margin-right: 30px; }
+  .content-header::after {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 80px;
+    background-image: url(../../images/svg/polygraph.svg);
+    position: absolute;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    left: 100px;
+    bottom: -20px;
+    z-index: 666; }
+
+.content-header-top > div {
+  display: flex; }
+
 /* Pages */
 body.path-frontpage {
   background: #fff; }
