--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,119 +1,50 @@
-.logo-block {
-  text-align: right;
-  position: fixed;
-  right: 0;
-  padding: 18px 10px;
-  font-size: rem(11px);
-  .logo {
-    width: 20px;
-    margin-bottom: 5px;
-    @include for-normal-layout {
-      width: 30px;
-    }
-  }
-  .slogan {
-    display: none;
-    @include for-normal-layout {
-      display: block;
-    }
-  }
-}
+.content-header {
+      
+  background-repeat: no-repeat;
+  height: 90px;
+  // overflow: hidden;
+  position: relative;
 
-.block-locale {
-  position: fixed;
-  left: 0;
-  padding: 20px;
-  font-size: rem(14px);
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    li {
-      display: inline;
-      &.active {
-        font-family: $font-main-bold;
-        a {
-          cursor: default;
-        }
-      }
-      &:not(:last-child)::after {
-        content: " | "
-      }
-    }
+  body.polygraph & {
+    background-image: url('../../images/top_bar/top_polygraph.jpg')
   }
-}
-
-.block-blockify-page-title {
-  flex: 1;
-  text-align: center;
-  .content {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  @include for-normal-layout {
-    flex: initial;
-    .content {
-      display: block;
-      height: auto;
-    }
-  }
-}
-
-.hamburger-btn {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 60px;
-  padding: 22px 20px;
-  background: #fff;
-  
-  @include for-normal-layout {
-    display: none;
+  body.investigation & {
+      background-image: url('../../images/top_bar/top_investigation.jpg')
   }
 
-  .lines {
+  &::before {
+    content: "";
     display: block;
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  .line {
-    display: block;
-    background: #000;
-    height: 2px;
-    width: 20px;
+    width: calc( 100% - 174px);
+    height: 6px;
+    background-color: #b8c5c3;
     position: absolute;
-    &.top {
-      top: 0;
-      left: 0;
-    }
-    &.center {
-      top: calc( 50% - 1px );
-      left: 0;
-    }
-    &.bottom {
-      bottom: 0;
-      left: 0;
-    }
-    transition: all .3s;
-  }
-  
-  &.open .line {
-    &.top {
-      top: calc( 50% - 1px );
-      transform: rotate(45deg);
-    }
-    &.center {
-      opacity: 0;
-    }
-    &.bottom {
-      bottom: calc( 50% - 1px );
-      transform: rotate(-45deg);
-    }
-    
+    right: 0;
+    bottom: -11px;
+    margin-right: 30px;
   }
 
+  &::after {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 80px;
+    background-image: url(../../images/svg/polygraph.svg);
+    position: absolute;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    left: 100px;
+    bottom: -20px;
+    z-index: 666;
+  }
+}
+
+
+// TOP
+
+.content-header-top {
+  > div {
+    display: flex;
+  } 
 }
