working on header still

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -6,3 +6,15 @@
     font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: 'heebo-medium';
+    src: url('../../fonts/heebo/Heebo-Medium.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'heebo-bold';
+    src: url('../../fonts/heebo/Heebo-Bold.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
