--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -34,6 +34,12 @@ a {
   transition: all 0.3s;
   text-decoration: none;
   color: $clr2;
+  &.is-active {
+    &:hover {
+        color: inherit;
+        cursor: default;
+    }
+  }
 }
 
 
