--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,12 +6,13 @@
   position: relative;
 
   body.polygraph & {
-    background-image: url('../../images/top_bar/top_polygraph.jpg')
+    background-image: url('../../images/top_bar/top_polygraph.jpg');
   }
   body.investigation & {
-      background-image: url('../../images/top_bar/top_investigation.jpg')
+    background-image: url('../../images/top_bar/top_investigation.jpg');
   }
 
+  
   &::before {
     content: "";
     display: block;
@@ -23,20 +24,31 @@
     bottom: -11px;
     margin-right: 30px;
   }
-
+  
   &::after {
     content: "";
     display: block;
-    width: 80px;
-    height: 80px;
-    background-image: url(../../images/svg/polygraph.svg);
     position: absolute;
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    left: 100px;
-    bottom: -20px;
-    z-index: 666;
+    
+    body.polygraph & {
+      background-image: url($polygraph-icon);
+      width: 79px;
+      height: 81px;
+      left: 85px;
+      bottom: -51px;
+    }
+    
+    body.investigation & {
+      background-image: url($investigation-icon);
+      width: 78px;
+      height: 78px;
+      left: 92px;
+      bottom: -51px;
+    }
+
   }
 }
 
