--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -8,7 +8,7 @@ button:focus, button:active, input:focus, input:active, select:focus, select:act
 
 body {
   background-image: url('../../images/main_bg.gif');
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'heebo', Arial, Helvetica, sans-serif;
   font-size: rem(14px);
   line-height: 1.3;
   color: $clr1;
@@ -31,7 +31,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-  transition: all 0.3s;
   text-decoration: none;
   color: $clr2;
   &.is-active {
