--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,8 +2,14 @@
       
   background-repeat: no-repeat;
   height: 90px;
-  // overflow: hidden;
   position: relative;
+  
+  > div {
+    height: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
   body.polygraph & {
     background-image: url('../../images/top_bar/top_polygraph.jpg');
@@ -32,6 +38,7 @@
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
+    z-index: 1;
     
     body.polygraph & {
       background-image: url($polygraph-icon);
