--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -6,13 +6,13 @@
 @import 'fonts.scss';
 @import 'functions.scss';
 @import 'logo.scss';
-// @import 'mixins.scss';
+@import 'mixins.scss';
 @import 'base.scss';
 @import 'layout.scss';
 
 
 @import 'menus.scss';
-// @import 'forms.scss';
+@import 'forms.scss';
 
 /* Blocks */
 @import 'header.scss';
