--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,24 +10,28 @@ body {
   background-image: url('../../images/main_bg.gif');
   font-family: 'heebo', Arial, Helvetica, sans-serif;
   font-size: rem(14px);
-  line-height: 1.3;
+  // line-height: 1.3;
   color: $clr1;
 }
 
 ::-moz-selection { /* Code for Firefox */
   color: #fff;
-  background: $clr2;
+  background: $clr1;
   text-shadow: none;
 }
 
 ::selection {
   color: #fff;
-  background: $clr2;
+  background: $clr1;
   text-shadow: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
+}
+
+small {
+  font-size: rem(12px);
 }
 
 a {
@@ -54,4 +58,15 @@ iframe {
 
 button, select {
   cursor: pointer;
+}
+
+.container-inline div, .container-inline label {
+  display: inline-block;
+}
+
+.page-title {
+  margin-top: 20px;
+  body:not(.node--type-page) & {
+    margin-top: 40px;
+  }
 }
