--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,6 @@
 .content-header {
       
+  background-image: url('../../images/top_bar/top_blog.jpg');
   background-repeat: no-repeat;
   height: 90px;
   position: relative;
@@ -39,6 +40,11 @@
     background-repeat: no-repeat;
     background-position: center;
     z-index: 1;
+    background-image: url($blog-icon);
+    width: 50px;
+    height: 50px;
+    left: 104px;
+    bottom: -24px;
     
     body.polygraph & {
       background-image: url($polygraph-icon);
@@ -63,7 +69,38 @@
 // TOP
 
 .content-header-top {
+  padding-top: 14px;
   > div {
     display: flex;
+    align-items: center;
   } 
+  .form-item, .form-actions {
+    margin: 0;
+  }
+
+  .form-actions {
+    margin-right: -4px;
+  }
+  .form-search {
+    line-height: 18px;
+    margin: 0;
+    border-radius: 0 5px 5px 0;
+    padding: 4px 6px;
+  }
+  .form-submit {
+    line-height: 22px;
+  }
+
+  .navigation {
+    ul.menu {
+      margin: 0 10px;
+    }
+    li.menu-item {
+      padding: 0;
+
+      a{
+        @include btn;
+      }
+    }
+  }
 }
