--- a/scss/_logo.scss
+++ b/scss/_logo.scss
@@ -8,7 +8,18 @@
 }
 
 .logo-block {
-    font-family: 'heebo';
+    
+    .field--name-body {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-bottom: 8px;
+    }
+    .logo-info {
+        flex: 1;
+        text-align: end;
+        margin: 0;
+    }
     .animated {
         animation: logo-wrapper 4s ease-in;
         -webkit-backface-visibility: hidden;
@@ -93,7 +104,7 @@
 
 .logo-text {
     margin: 0;
-    line-height: 1.1;
+    line-height: 0.9;
     font-size: rem(66px);
     letter-spacing: rem(2px);
     .small-logo & {
@@ -102,6 +113,7 @@
     }
 }
 .logo-menu {
+    font-family: 'heebo-medium';
     margin-right: rem(-30px);
     font-size: rem(18px);
     .small-logo & {
