--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* SAMPLE SCSS FILE CONTENTS */
 ul.tabs {
   border-bottom: 1px solid #999; }
@@ -140,12 +141,15 @@ a.more-link {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  margin-bottom: 8px; }
+  margin-bottom: 12px; }
 
 .logo-block .logo-info {
   flex: 1;
   text-align: end;
   margin: 0; }
+  .logo-block .logo-info a {
+    color: inherit;
+    font-family: heebo-medium; }
 
 .logo-block .animated {
   animation: logo-wrapper 4s ease-in;
@@ -245,19 +249,27 @@ body {
 ::-moz-selection {
   /* Code for Firefox */
   color: #fff;
-  background: #4B4B4D;
+  background: #aca573;
   text-shadow: none; }
 
 ::selection {
   color: #fff;
-  background: #4B4B4D;
+  background: #aca573;
   text-shadow: none; }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0; }
+  margin: 0 0 0.5em;
+  font-weight: normal;
+  font-family: 'heebo-medium'; }
+
+h2, h3, h4, h5, h6 {
+  color: #aca573; }
 
 small {
   font-size: 0.75rem; }
+
+p {
+  margin-top: 0; }
 
 a {
   text-decoration: none;
@@ -265,6 +277,41 @@ a {
   a.is-active:hover {
     color: inherit;
     cursor: default; }
+
+q, blockquote {
+  quotes: "”" "“" "'" "'";
+  font-size: 1.25rem;
+  font-family: 'heebo-bold';
+  color: #aca573;
+  margin: 1rem 0 0.25rem;
+  display: inline-block; }
+
+blockquote:before {
+  content: open-quote;
+  margin-left: -4px;
+  position: relative;
+  top: 10px;
+  font-family: 'heebo';
+  font-size: 31px;
+  line-height: 0; }
+
+blockquote:after {
+  content: close-quote;
+  margin-right: -4px;
+  position: relative;
+  top: 10px;
+  font-family: 'heebo';
+  font-size: 31px;
+  line-height: 0; }
+
+q:before {
+  content: open-quote; }
+
+q:after {
+  content: close-quote; }
+
+.quote-author {
+  font-style: italic; }
 
 img {
   width: 100%;
@@ -286,8 +333,11 @@ button, select {
     margin-top: 40px; }
 
 .dialog-off-canvas-main-canvas {
-  max-width: 1024px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  max-width: 860px; }
+  @media (min-width: 1060px) {
+    .dialog-off-canvas-main-canvas {
+      max-width: 1024px; } }
 
 .main-layout {
   background-color: #F6F5F0;
@@ -303,7 +353,7 @@ button, select {
   border-left-style: solid;
   border-top-color: #F6F5F0;
   border-left-color: #F6F5F0;
-  padding-bottom: 40px; }
+  padding-bottom: 90px; }
   .main-layout .region-content {
     width: 100% !important;
     margin: 0 !important; }
@@ -351,7 +401,7 @@ header {
       color: #4B4B4D;
       font-size: 1.125rem; }
       .main-menu li.menu-item a:hover {
-        color: rgba(184, 197, 195, 0.7); }
+        color: #E24739; }
 
 .secondary-menu-header ul.menu {
   display: flex;
@@ -381,11 +431,14 @@ header {
     .secondary-menu-header li.menu-item a.is-active, .secondary-menu-header li.menu-item a:hover {
       background-color: rgba(75, 75, 77, 0.3); }
 
-input[type="text"], input[type="search"] {
+input[type="text"], input[type="search"], input[type="email"], textarea {
   border: 1px solid #b8c5c3;
   color: #939597;
   border-radius: 5px;
   padding: 4px 6px; }
+
+textarea {
+  padding: 18px; }
 
 /* Blocks */
 .content-header {
@@ -463,6 +516,26 @@ input[type="text"], input[type="search"] {
       appearance: button;
       color: inherit;
       padding: 4px 8px; }
+
+.region-footer nav.navigation > ul.menu {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 40px auto 80px;
+  max-width: 860px; }
+  .region-footer nav.navigation > ul.menu ul {
+    margin: 0; }
+  .region-footer nav.navigation > ul.menu li {
+    padding: 0; }
+    .region-footer nav.navigation > ul.menu li.menu-item--expanded {
+      list-style-image: none;
+      list-style-type: none; }
+  .region-footer nav.navigation > ul.menu > li > a {
+    font-size: 1rem;
+    font-family: 'heebo-medium';
+    display: inline-block;
+    margin-bottom: 0.625rem; }
+  .region-footer nav.navigation > ul.menu a {
+    color: inherit; }
 
 /* Pages */
 body.path-frontpage {
