added search and finished contact form

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,6 +4,8 @@
     justify-content: space-evenly;
     margin: 40px auto 80px;
     max-width: 860px;
+    font-size: rem(12px);
+    line-height: 2;
 
     ul {
       margin: 0;
