--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -9,6 +9,7 @@
 @import 'mixins.scss';
 @import 'base.scss';
 @import 'layout.scss';
+@import 'teasers.scss';
 
 
 @import 'menus.scss';
@@ -20,5 +21,6 @@
 
 /* Pages */
 @import 'front.scss';
+@import 'pages.scss';
 
 
