--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,10 +1,24 @@
-input[type="text"], input[type="search"], input[type="email"], textarea {
+input[type="text"], input[type="search"], input[type="email"], input[type="tel"], textarea {
     border: 1px solid $clr3;
-    color: $clr4;
+    color: $clr1;
     border-radius: 5px;
     padding: 4px 6px;
+    width: 100%;
+    max-width: 500px;
+    &.required {
+        border-color: rgba($clr2, .4);
+    }
 }
 
-textarea {
-    padding: 18px;
-}
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: $clr4;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: $clr4;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: $clr4;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: $clr4;
+  }
