starting responsive design

--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -34,10 +34,10 @@
         
     }
     &.phone-block::after {
-        background-image: url('http://natisagi.com/images/contactIconPhone2.gif');
+        background-image: url('../../images/phone.gif');
     }
     &.adress-block::after {
-        background-image: url('http://natisagi.com/images/contactIconMail2.gif');
+        background-image: url('../../images/mail.gif');
     }
 
     h3 {
