--- a/css/custom.css
+++ b/css/custom.css
@@ -403,10 +403,10 @@ header {
     font-family: 'heebo-bold'; }
 
 .node--view-mode-teaser {
-  display: inline-flex;
   border-bottom: 1px dashed #b8c5c3;
   padding-bottom: 10px;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  max-width: 550px; }
   .node--view-mode-teaser img {
     width: initial;
     height: initial;
@@ -480,7 +480,7 @@ input[type="text"], input[type="search"], input[type="email"], input[type="tel"]
   width: 100%;
   max-width: 500px; }
   input[type="text"].required, input[type="search"].required, input[type="email"].required, input[type="tel"].required, textarea.required {
-    border-color: rgba(226, 71, 57, 0.4); }
+    border-color: rgba(75, 75, 77, 0.7); }
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
@@ -699,8 +699,8 @@ body.path-frontpage {
     background-repeat: no-repeat;
     background-position: right top; }
   .web-from-info.phone-block::after {
-    background-image: url("http://natisagi.com/images/contactIconPhone2.gif"); }
+    background-image: url("../../images/phone.gif"); }
   .web-from-info.adress-block::after {
-    background-image: url("http://natisagi.com/images/contactIconMail2.gif"); }
+    background-image: url("../../images/mail.gif"); }
   .web-from-info h3 {
     margin-bottom: 0.875rem; }
