--- a/scss/_teasers.scss
+++ b/scss/_teasers.scss
@@ -1,8 +1,9 @@
 .node--view-mode-teaser {
-    display: inline-flex;
+    // display: inline-flex;
     border-bottom: 1px dashed $clr3;
     padding-bottom: 10px;
     margin-bottom: 30px;
+    max-width: 550px;
     img {
         width: initial;
         height: initial;
