--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,12 +6,21 @@ button:focus, button:active, input:focus, input:active, select:focus, select:act
   outline: none;
 }
 
+html {
+  @include for-mobile-layout {
+    font-size: 18px;
+  }
+}
+
 body {
-  background-image: url('../../images/main_bg.gif');
+  background-color: #fff !important;
   font-family: 'heebo', Arial, Helvetica, sans-serif;
   font-size: rem(14px);
-  // line-height: 1.3;
   color: $clr1;
+  @include for-normal-layout {
+    background-image: url('../../images/main_bg.gif');
+    background-color: transparent !important;
+  }
 }
 
 ::-moz-selection { /* Code for Firefox */
@@ -53,6 +62,10 @@ a {
         cursor: default;
     }
   }
+}
+
+button, .btn {
+  @include button-layout;
 }
 
 q, blockquote {
@@ -115,8 +128,8 @@ button, select {
 }
 
 .page-title {
-  margin-top: 20px;
-  body:not(.node--type-page) & {
-    margin-top: 40px;
-  }
+  margin-top: 30px;
+  // body:not(.node--type-page) & {
+  //   margin-top: 40px;
+  // }
 }
