--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,48 +23,68 @@
   &::before {
     content: "";
     display: block;
-    width: calc( 100% - 174px);
+    width: 100%;
+    right: -30px;
     height: 6px;
     background-color: #b8c5c3;
     position: absolute;
-    right: 0;
     bottom: -11px;
     margin-right: 30px;
+    @include two-column-layout {
+      width: calc( 100% - 174px);
+      right: 0;
+    }
   }
   
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 1;
-    background-image: url($blog-icon);
-    width: 50px;
-    height: 50px;
-    left: 104px;
-    bottom: -24px;
-    
-    body.polygraph & {
-      background-image: url($polygraph-icon);
-      width: 79px;
-      height: 81px;
-      left: 85px;
-      bottom: -51px;
+  @include two-column-layout {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      z-index: 1;
+      background-image: url($blog-icon);
+      width: 50px;
+      height: 50px;
+      left: 104px;
+      bottom: -24px;
+      
+      body.polygraph & {
+        background-image: url($polygraph-icon);
+        width: 79px;
+        height: 81px;
+        left: 85px;
+        bottom: -51px;
+      }
+      
+      body.investigation & {
+        background-image: url($investigation-icon);
+        width: 78px;
+        height: 78px;
+        left: 92px;
+        bottom: -51px;
+      }
+  
     }
-    
-    body.investigation & {
-      background-image: url($investigation-icon);
-      width: 78px;
-      height: 78px;
-      left: 92px;
-      bottom: -51px;
-    }
+  }
 
+}
+
+
+.responsive-menu-toggle {
+  position: absolute;
+  left: 0;
+  top: 0;
+  @include for-normal-layout {
+    display: none;
   }
 }
 
+.responsive-menu-toggle-icon:before, .responsive-menu-toggle-icon:after, .responsive-menu-toggle-icon span.icon {
+  background: $clr1;
+}
 
 // TOP
 
@@ -89,6 +109,7 @@
   }
   .form--inline {
     display: inline-flex;
+    align-items: center;
     .form-item {
       margin: 0;
     }
@@ -103,7 +124,8 @@
     max-width: 150px;
   }
   .form-submit {
-    line-height: 22px;
+    line-height: 26px;
+    @include button-layout;
   }
 
   .navigation {
@@ -114,7 +136,8 @@
       padding: 0;
 
       a{
-        @include btn;
+        @include button-layout;
+        line-height: 26px;
       }
     }
   }
