--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,6 +1,14 @@
-@mixin btn {
-    -webkit-appearance: button;
-    appearance: button;
+// Button mixins
+
+@mixin button-layout {
+    display: inline-block;
     color: inherit;
-    padding: 4px 8px;
-}
+    padding: 0 8px;
+    border-radius: 0;
+    border: solid 1px $clr4;
+    background: #f2f2f2;
+    background: -moz-linear-gradient(top, #f2f2f2 0%, #dddddd 100%);
+    background: -webkit-linear-gradient(top, #f2f2f2 0%,#dddddd 100%);
+    background: linear-gradient(to bottom, #f2f2f2 0%,#dddddd 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#dddddd',GradientType=0 );
+  }
