removed off canvas after moving to natis server

--- a/css/custom.css
+++ b/css/custom.css
@@ -363,6 +363,9 @@ button, select {
     .dialog-off-canvas-main-canvas {
       max-width: 1024px; } }
 
+.off-canvas-wrapper {
+  display: none; }
+
 .mm-page, .mm-wrapper_background body {
   background-color: inherit; }
 
