--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -7,6 +7,10 @@
     }
 }
 
+.off-canvas-wrapper {
+    display: none;
+}
+
 .mm-page, .mm-wrapper_background body {
     background-color: inherit;
 }
